[gd_scene load_steps=11 format=3 uid="uid://ca4q8mugefc4y"]

[ext_resource type="AudioStream" uid="uid://d1drldh0dy2a8" path="res://assets/sfx/music/Boiler.ogg" id="1_6fhfa"]
[ext_resource type="Script" uid="uid://cln5j4v1ur3u7" path="res://scenes/audio_controller.gd" id="1_vj1x0"]
[ext_resource type="AudioStream" uid="uid://p71r843aurfu" path="res://assets/sfx/jumps/Jump_6.wav" id="2_vj1x0"]
[ext_resource type="AudioStream" uid="uid://dtmgcyp0dry8e" path="res://assets/sfx/game_over/Retro Success Melody 04 - electric piano 2.wav" id="3_12scf"]
[ext_resource type="AudioStream" uid="uid://cl3xo11cu5028" path="res://assets/sfx/death/Electronic oops_2.wav" id="5_12scf"]
[ext_resource type="AudioStream" uid="uid://cyi86e4a5mv53" path="res://assets/sfx/hit/Retro Impact Punch 07.wav" id="5_my8s2"]
[ext_resource type="AudioStream" uid="uid://ccx7xr6m8genc" path="res://assets/sfx/jumps/Retro Jump Simple C2 02.wav" id="6_nf7h6"]
[ext_resource type="AudioStream" uid="uid://d3oi73te6hheu" path="res://assets/sfx/points/Coin.wav" id="7_nf7h6"]
[ext_resource type="AudioStream" uid="uid://jup84xujqsgk" path="res://assets/sfx/menu/menu_6.ogg" id="9_2e0id"]
[ext_resource type="AudioStream" uid="uid://bwnrxx7r3efub" path="res://assets/sfx/music/#73 World Of Nowhere - Orchestrated.WAV" id="10_lp5i4"]

[node name="AudioController" type="Node2D"]
process_mode = 3
script = ExtResource("1_vj1x0")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_6fhfa")
volume_db = -15.0
bus = &"Music"

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vj1x0")
bus = &"SFX"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_12scf")
bus = &"SFX"

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_my8s2")
bus = &"SFX"

[node name="AlienHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nf7h6")
bus = &"SFX"

[node name="Point" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nf7h6")
volume_db = -10.0
pitch_scale = 0.9
bus = &"SFX"

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_12scf")
bus = &"SFX"

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2e0id")
bus = &"SFX"

[node name="MainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_lp5i4")
bus = &"Music"
